# CppAPIDesign

./: .gitattributes  .gitignore  .gitmodules  .gitsecret  intro_api.cpp  intro_api_test.cpp  parallel_main.cpp
Chapter2/: address_book_api.cpp  extern_test.cpp  extern_test.hpp
Chapter2/AddressBook/: .gitignore  address_book_api.cpp
Chapter2/ChatLog/: CMakeLists.txt  Makefile  build.bat
Chapter2/ChatLog/src/: ChatUser.h  TextChatLog.cpp  TextChatLog.h  main.cpp
Chapter2/CheapHotelShower/: CMakeLists.txt  CheapHotelShower.h  Makefile  cheapHotelShower.cpp  cmake_install.cmake  main.cpp
Chapter2/DateTime/: DateTimeAPI.cpp  Makefile
Chapter2/Externs/: extern_test.cpp
Chapter2/Fireworks/: build.bat  build_log_20230929-223249.txt  fireparticle.hpp  fireworks.hpp  fireworks.map  fireworks_main.cpp  output.def  output.lib
Chapter2/HotelShower/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HotelShowerApp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hotel_app.vcxproj  hotel_app.vcxproj.filters
Chapter2/IdealHotelShower/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  IdealHotelShower.cpp  IdealHotelShower.h  IdealHotelShower.vcxproj  IdealHotelShower.vcxproj.filters  IdealHotelShowerLib.vcxproj  IdealHotelShowerLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Chapter2/IdealHotelShower/IdealHotelShowerLib.dir/Debug/IdealHot.6C311638.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Chapter2/IdealHotelShower/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
Chapter2/IntegerStack/: .gitignore
Chapter2/MobilePhone/: Makefile  build_all.bat  cmake_build.bat  (+1 more)
Chapter2/Module/: CMakeLists.txt
Chapter2/MyObjectClass/tests/: CMakeLists.txt  Makefile  MyObject.def  test_build.bat
Chapter2/ObjectHolder/: .gitignore  CMakeLists.txt
Chapter2/ObjectHolder/make_build/: Object.map  ObjectHolder.map
Chapter2/ObjectHolder/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Makefile  MyProject.sln  Object.cpp  Object.h  Object.map  Object.vcxproj  Object.vcxproj.filters  ObjectHolder.cpp  ObjectHolder.vcxproj  ObjectHolder.vcxproj.filters  ObjectTaker.vcxproj  ObjectTaker.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clean-all.cmake  clean-cmake-files.vcxproj  clean-cmake-files.vcxproj.filters  cmake_install.cmake  main.h  main.vcxproj  main.vcxproj.filters  model_description.xml
Chapter2/ObjectHolder/src/Object.dir/Debug/: Object.dll.recipe
Chapter2/ObjectHolder/src/Object.dir/Debug/Object.tlog/: CL.command.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog
Chapter2/ObjectHolder/src/ObjectHolder.dir/Debug/ObjectHolder.tlog/: CL.command.1.tlog  CL.read.1.tlog
Chapter2/ObjectHolder/src/ObjectTaker.dir/Debug/ObjectTaker.tlog/: CL.write.1.tlog
Chapter2/ObjectHolder/src/binaries/Debug/: Object.exp  Object.lib  ObjectHolder.exp
Chapter2/ObjectHolder/src/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Chapter2/ObjectHolder/src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog
Chapter2/URLDownloader/: .gitignore  CMakeLists.txt  build_log_20230929-230030.txt  liburldownloader.def  run.bat  urldownloader.cpp  urldownloader.map
MyWork/Chapter2/HotelShower/source/: CMakeLists.txt  hotelShower.cpp
MyWork/Chapter2/MyCustomObject/: CMakeLists.txt
MyWork/Chapter2/MyCustomObject/src/: MyCustomObject.cpp  MyCustomObject.h  main.hpp
MyWork/Chapter2/MyCustomObject/src/MyCustomObject.dir/Debug/: MyCustomObject.dll.recipe
MyWork/Chapter2/MyCustomObject/src/MyCustomObject.dir/Debug/MyCustomObject.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog
MyWork/Chapter2/MyCustomObject/src/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
MyWork/Chapter2/MyCustomObject/src/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
MyWork/Chapter2/MyCustomObject/src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
MyWork/Chapter2/MyCustomObject/src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
MyWork/Chapter2/MyObjectClass/: CMakeLists.txt  build.bat
MyWork/Chapter2/MyObjectClass/source/: MyObject.h  main.cpp
MyWork/Chapter2/MyObjectClass/tests/: test_MyObject.cpp
MyWork/Chapter2/MySlot/: .gitignore  CMakeLists.txt  Makefile  build.bat
MyWork/Chapter2/MySlot/src/: MySlot.cpp  MySlot.h  main.cpp  main.h
MyWork/Chapter2/ObjectHolder/src/: CMakeLists.txt  ObjectHolder.h  ObjectTaker.cpp  ObjectTaker.h  main.cpp
MyWork/Chapter2/ObjectHolder/src/Object.dir/Debug/: Object.ilk
MyWork/Chapter2/ObjectHolder/src/Object.dir/Debug/Object.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Object.lastbuildstate  link.write.1.tlog  link.write.2u.tlog
MyWork/Chapter2/ObjectHolder/src/ObjectHolder.dir/Debug/ObjectHolder.tlog/: CL.write.1.tlog  CustomBuild.read.1.tlog
MyWork/Chapter2/ObjectHolder/src/ObjectTaker.dir/Debug/ObjectTaker.tlog/: CL.command.1.tlog  CL.read.1.tlog
MyWork/Chapter2/ObjectHolder/src/binaries/Debug/: ObjectHolder.lib  ObjectTaker.exp  ObjectTaker.lib
MyWork/Chapter2/ObjectHolder/src/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
MyWork/Chapter2/ObjectHolder/src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
MyWork/Chapter2/ObjectHolder/src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
MyWork/Chapter2/TextChatLog/: CMakeLists.txt
MyWork/Chapter2/TextChatLog/src/: TextChatLog.cpp  TextChatLog.h  main.cpp
MyWork/Chapter3/abstract_factory/: CMakeLists.txt
MyWork/Chapter3/abstract_factory/src/: Button.h  CheckBox.h  LinuxCheckBox.cpp  LinuxCheckBox.h  LinuxFactory.cpp  WindowsButton.h  main.cpp
MyWork/Chapter3/observer/: CMakeLists.txt  Makefile
MyWork/Chapter5/fmod/: CMakeLists.txt  cmake_install.cmake  makefile
MyWork/Chapter5/fmod/src/: c_api.c  cpp_api.cpp  event_api.cpp
MyWork/Chapter5/stack_template/: CMakeLists.txt
(+440 files in other folders)
